# loreforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  configuration.md  demo-guide.md  dependencies.md  deployment.md  evaluation.md  final-engineering-audit.md  frontend.md  ingestion-pipeline.md  interview-guide.md  observability.md  onboarding.md  postgresql-persistence.md  production-gap-audit.md  production-readiness-checklist.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py  script.py.mako
migrations/versions/: 0001_create_document_metadata.py  0002_create_durable_retrieval.py  0003_create_users_and_ownership.py
src/loreforge/: __init__.py  main.py  settings.py
tests/: test_auth_settings.py  test_health.py  test_runtime_observability.py  test_settings.py
tests/api/: test_admin.py  test_askme.py  test_auth.py  test_document_upload.py
tests/application/: __init__.py  test_composition.py  test_container.py  test_runtime_hardening.py
tests/askme/: __init__.py  test_models.py  test_service.py
tests/auth/: test_authentication.py
tests/catalog/: test_models.py  test_ownership.py  test_repository.py  test_service.py
tests/database/: __init__.py  test_auth_repository.py  test_catalog_repository.py  test_indexing_repository.py  test_migrations.py  test_retrieval_repository.py
tests/documents/: test_chunking.py  test_ingestion.py  test_models.py  test_normalization.py  test_parsing.py  test_upload.py
(+212 files in other folders)
