[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loreforge"
version = "0.1.0"
description = "A small FastAPI foundation for the LoreForge project."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.32",
  "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loreforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
files = ["src"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
